# inference

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
